--- a/LibraryGenerator/LibraryGenerator.csproj
+++ b/LibraryGenerator/LibraryGenerator.csproj
@@ -6,8 +6,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="CppSharp" Version="1.0.39.31128" />
-      <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" />
+      <PackageReference Include="CppSharp" Version="1.0.45.22293" />
+      <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.5.0-2.final" />
     </ItemGroup>
 
 </Project>
