Fix missing packageSourceMapping for nuget.org

--- a/nuget.config
+++ b/nuget.config
@@ -8,5 +8,8 @@
         <packageSource key="github">
             <package pattern="CppSharp" />
         </packageSource>
+        <packageSource key="nuget.org">
+            <package pattern="*" />
+        </packageSource>
     </packageSourceMapping>
 </configuration>
