--- a/Valve.Sockets/Valve.Sockets.csproj
+++ b/Valve.Sockets/Valve.Sockets.csproj
@@ -4,12 +4,24 @@
         <OutputType>Library</OutputType>
         <TargetFramework>net7.0</TargetFramework>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <IsPackable>true</IsPackable>
+
+        <PackageId>Valve.Sockets.AutoGen</PackageId>
+        <Title>Valve.Sockets.AutoGen</Title>
+        <Description>Mostly auto-generated C# bindings for GameNetworkingSockets by Valve Software.</Description>
+        <RepositoryUrl>https://github.com/TSRBerry/ValveSockets-CSharp</RepositoryUrl>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
     </PropertyGroup>
     
     <PropertyGroup>
         <ArrayNamespace>Valve.Sockets.ArrayStructs</ArrayNamespace>
         <ArrayOutputPath>ArrayStructs</ArrayOutputPath>
     </PropertyGroup>
+
+    <ItemGroup>
+        <None Include="..\README.md" Pack="true" PackagePath="/" />
+    </ItemGroup>
     
     <ItemGroup>
         <PackageReference Include="Ryujinx.CustomTasks" Version="1.0.6" PrivateAssets="all" />
