--- a/Valve.Sockets/Valve.Sockets.csproj
+++ b/Valve.Sockets/Valve.Sockets.csproj
@@ -21,6 +21,7 @@
 
     <ItemGroup>
         <None Include="..\README.md" Pack="true" PackagePath="/" />
+        <Content Include="runtimes\**" PackagePath="runtimes" Visible="false" />
     </ItemGroup>
 
     <ItemGroup>
